# LineNexus

./: .env.example  .gitignore  AGENT.md  AGENTS.md  README.md  mypy.ini  pyproject.toml  ruff.toml
docs/: Clean_Architecture_And_Domain_Models.md  Development_Plan.md  GIT_RULES.md  LOG_RULES.md  Software_Design_Document.md
src/lineaihelper/: __init__.py  cli.py  config.py  context.py  dispatcher.py  exception_handlers.py  exceptions.py  logging_config.py  main.py  middlewares.py  prompt_engine.py
src/lineaihelper/models/: market_data.py
src/lineaihelper/prompts/chat/: latest.md
src/lineaihelper/prompts/stock/: latest.md
src/lineaihelper/providers/: base_provider.py  stock_provider.py
src/lineaihelper/services/: __init__.py  base_service.py  chat_service.py  help_service.py  price_service.py  stock_service.py  technical_analysis_service.py
tests/: conftest.py  test_dispatcher.py  test_logging.py  test_logging_config.py  test_main.py  test_prompt_engine.py
tests/services/: test_chat_service.py  test_help_service.py  test_price_service.py  test_stock_service.py  test_technical_analysis_service.py
