[project]
name = "lineaihelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "final898y", email = "final898y@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.121.3",
    # 註: fastapi[standard] 已經包含了 uvicorn，所以不需要額外寫 "uvicorn"
    "loguru>=0.7.3",
]

[project.scripts]
# 格式: 指令名稱 = "套件資料夾.檔案名:函式名"
# 這行設定後，輸入 `uv run dev` 就會去執行 lineaihelper/main.py 裡面的 start() 函式
dev = "lineaihelper.main:start"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
